Pushing final eval changes to master