@@ -17,9 +17,16 @@ v1.0
 ## IDE
 IntelliJ Community 2022.1.2
 ## Libraries
-JDK 18.0.1.1
+JDK 18.0.1.1  
 JavaFX 18.0.2
 ## Drivers
-mysql-connector-java-8.0.29
-
+mysql-connector-java-8.0.25
+## IDE Run Instructions
+1. Check to ensure JDK, JFX, and JDBC driver are up-to-date
+2. Ensure main.Main is set as the startup project
+3. Ensure you have a path variable for JFX listed in the IDE settings. I am using this name for it:
+   1. PATH_TO_FX
+4. Use the following VM options in the run configurations:
+   1. --module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.media,javafx.web
+5. Run using the play or start button in your IDE
 
