@@ -1,25 +1,32 @@
+README
 # Project C195 Adam_Brents
 - Project is an appointment manager app to schedule and maintain appointments with customers
 - 3rd report from A.3.f of requirements is a Customer Schedule by Division option in reports dropdown
 
 ## Authors
+
 - [@adambrents](https://www.github.com/adambrents)
+
 
 ## 🚀 Contact Information
 [Email](abren53@wgu.edu)
-
 ## Application Version  
 v1.0
-
 ## Date
 8-12-2022
-
 ## IDE
 IntelliJ Community 2022.1.2
-
 ## Libraries
 JDK 18.0.1.1
 JavaFX 18.0.2
-
 ## Drivers
-mysql-connector-java-8.0.29
+mysql-connector-java-8.0.25
+## IDE Run Instructions
+1. Check to ensure JDK, JFX, and JDBC driver are up-to-date
+2. Ensure main.Main is set as the startup project
+3. Ensure you have a path variable for JFX listed in the IDE settings. I am using this name for it:
+   1. PATH_TO_FX
+4. Use the following VM options in the run configurations:
+   1. --module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.media,javafx.web
+5. Run using the play or start button in your IDE
+
